@@ -25,17 +25,30 @@ dependencies {
 	// MySQL Driver
 	implementation 'com.mysql:mysql-connector-j'
 
-	// Lombok for reducing boilerplate code
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	// OpenAPI/Swagger (Springdoc)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
+	useJUnitPlatform()
+}
+
+test {
+	jvmArgs += [
+			'--add-opens=java.base/java.lang=ALL-UNNAMED',
+			'-XX:+EnableDynamicAgentLoading'
+	]
 	useJUnitPlatform()
 }
